--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
+  <div align="right">
+    <button type="button" class="btn btn-danger btn-sm" (click)="refreshJoke()">
+      <span class="glyphicon glyphicon-refresh"></span>
+    </button>
+  </div>
   <h1>Chuck Norris</h1>
 
   <p *ngIf="joke">{{ joke.value }}</p>
